<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
    android:layout_margin="10dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ingredient_quantity"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/ingredient_unit"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ingredient_name"
            android:hint="ingredient name"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/i_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
