<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:id="@+id/steps"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"

    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/step_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="Step 1"
            android:layout_marginBottom="5dp"
            android:id="@+id/step_count"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:elevation="30dp"
            android:layout_margin="5dp"
            >
            <ImageView
                android:id="@+id/step_1_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                />
        </androidx.cardview.widget.CardView>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/step_1_text_description"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:layout_marginBottom="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>



</LinearLayout>